src/test/deca/context/invalid/test_error_2.7-4.deca
// Description:
//    Soulève l'erreur (2.7)
//
// Resultat:
//    Erreur contextuelle
//    Ligne 19 : Return type of getX should be une sous-classe de "int" (règle 2.7)
//
// Historique:
//      cree le 19/01/2022


class A {
    int getX(){
        return 4;
    }
}

class B extends A {
    void getX(){
    }
}


